# cdec

./: .gitignore  Makefile.am  configure.ac  rebuild-bolt.sh  rebuild-umiacs.sh  tarball.sh
bolt-scripts/: add-sos-eos.pl  clean-nbest.py  declass-ibm.pl  decode.sh  end-to-end.sh  grammar_extraction.sh  mbr-1-best.pl  remove-sos-eos-sgml.pl  timing-summary.sh  timing.sh
decoder/: Makefile.am  apply_models.cc  bottom_up_parser.cc  bottom_up_parser.h  cdec_ff.cc  decoder.cc  decoder.h  dwarf.cc  dwarf.h  ff_const_reorder.cc  ff_dwarf.cc  ff_hash.cc  ff_hash.h  ff_rules.cc  ff_rules.h  ff_ruleshape.cc  ff_ruleshape.h  ff_soft_syn.cc  ff_soft_syn.h  ff_wordalign.cc  ff_wordalign.h  ffset.cc  ffset.h  grammar_test.cc  hg.h  hg_intersect.cc  kbest.h  lattice.cc  lattice.h  oracle_bleu.h  parser_test.cc  program_options.h  scfg_translator.cc  trule.cc  trule.h  viterbi.cc  viterbi.h
dpmert/: parallelize.pl
environment/: LocalConfig.pm
gi/pf/: pyp_tm.cc  (+1 more)
m4/: boost.m4
mira-vlad/: Makefile.am  dist-mira.pl  find_best.pl  kbest_mirav5.cc  run_mira-discourse.pl  run_mira.pl  run_mira2.pl
mteval/: aer_scorer.cc  comb_scorer.cc  mbr_kbest.cc  ns_cer.h  scorer.cc  scorer.h  scorer_test.cc  ter.cc
new-decoder/: Makefile.am  app.h  cedec.cc  components.h  constrain_hg.cc  constrain_hg.h  context.cc  context.h  generate_hg.cc  generate_hg.h  input.cc  input.h  inspect_hg.cc  inspect_hg.h  pipeline.h  pipeline_tests.cc  rescore_hg.cc  rescore_hg.h  silent.cc  silent.h  stages.h  write_hg.h
sa-extract/: Makefile.bolt  Makefile.umiacs  README_ljh  add-sos-eos-parse.pl  cbitlist.pxd  cbitlist.pyx  cn.py  compile_bin.py  context_model.py  csyncon.pxd  csyncon.pyx  csynctx.pxd  csynctx.pyx  escape-testset-add-grammar-gz-syntactic-constraints-context.pl  escape-testset-add-grammar-gz-syntactic-constraints.pl  escape-testset-add-grammar-gz.pl  escape-testset-add-grammar.pl  extract.ini  extract_syncon.cpp  extractor.py  manager.py  rulefactory.pyx  sa-compile.pl  setup.py  sgml.py
utils/: Makefile.am  b64featvector.cc  stringlib.h  value_array.h
(+11 files in other folders)
